--- a/sample/src/main/res/layout/example_bootstrap_button.xml
+++ b/sample/src/main/res/layout/example_bootstrap_button.xml
@@ -29,6 +29,9 @@
                 android:text="Corners"
                 app:bootstrapBrand="success"
                 app:bootstrapSize="lg"
+                app:buttonMode="regular"
+                app:showOutline="false"
+                app:roundedCorners="true"
                 />
 
             <com.beardedhen.androidbootstrap.BootstrapButton
