tidy up client code

--- a/AndroidBootstrap/src/main/res/values/dimens.xml
+++ b/AndroidBootstrap/src/main/res/values/dimens.xml
@@ -1,21 +1,11 @@
 <resources>
 
-    <dimen name="bbuton_rounded_corner_radius">5dp</dimen>
-
-    <dimen name="padding_micro">4dp</dimen>
-    <dimen name="padding_small">8dp</dimen>
-    <dimen name="padding_medium">12dp</dimen>
-    <dimen name="padding_large">16dp</dimen>
-
-    <!-- REM units converted to dp using 14sp font as baseline -->
-
     <!-- Default button size -->
     <dimen name="bootstrap_button_default_font_size">14sp</dimen>
     <dimen name="bootstrap_button_default_vert_padding">5.75dp</dimen>
     <dimen name="bootstrap_button_default_hori_padding">14dp</dimen>
     <dimen name="bootstrap_button_default_corner_radius">4dp</dimen>
     <dimen name="bootstrap_button_default_edge_width">1dp</dimen>
-
 
     <!-- Default edit text size -->
     <dimen name="bootstrap_edit_text_default_font_size">14sp</dimen>
@@ -24,22 +14,13 @@
     <dimen name="bootstrap_edit_text_corner_radius">6dp</dimen>
     <dimen name="bootstrap_edit_text_edge_width">1.5dp</dimen>
 
-    <!-- Small button size -->
-    <dimen name="bootstrap_button_small_font_size">11.9sp</dimen>
-    <dimen name="bootstrap_button_small_vert_padding">3.5dp</dimen>
-    <dimen name="bootstrap_button_small_hori_padding">10.4dp</dimen>
-    <dimen name="bootstrap_button_small_corner_radius">2.8dp</dimen>
-    <dimen name="bootstrap_button_small_edge_width">0.875dp</dimen>
-
-    <!-- Large button size -->
-    <dimen name="bootstrap_button_large_font_size">17.5sp</dimen>
-    <dimen name="bootstrap_button_large_vert_padding">10.5dp</dimen>
-    <dimen name="bootstrap_button_large_hori_padding">17.5dp</dimen>
-    <dimen name="bootstrap_button_large_corner_radius">4.2dp</dimen>
-    <dimen name="bootstrap_button_large_edge_width">0.875dp</dimen>
+    <!-- Thumbnails -->
+    <dimen name="bthumbnail_default_border">8dp</dimen>
+    <dimen name="bthumbnail_rounded_corner">8dp</dimen>
+    <dimen name="bthumbnail_outer_stroke">2dp</dimen>
 
     <!-- Headings -->
-    <dimen name="bootstrap_h1_text_size">31.5sp</dimen> <!-- Multiply by .25 for vert, .40 for hori -->
+    <dimen name="bootstrap_h1_text_size">31.5sp</dimen>
     <dimen name="bootstrap_h1_vert_padding">7.875dp</dimen>
     <dimen name="bootstrap_h1_hori_padding">12.6dp</dimen>
 
@@ -63,11 +44,8 @@
     <dimen name="bootstrap_h6_vert_padding">3.5dp</dimen>
     <dimen name="bootstrap_h6_hori_padding">5.6dp</dimen>
 
+    <!-- Misc -->
     <dimen name="bootstrap_default_corner_radius">3dp</dimen>
     <dimen name="bootstrap_progress_bar_height">14dp</dimen>
-
-    <dimen name="bthumbnail_default_border">8dp</dimen>
-    <dimen name="bthumbnail_rounded_corner">8dp</dimen>
-    <dimen name="bthumbnail_outer_stroke">2dp</dimen>
 
 </resources>
