--- a/AndroidBootstrap/src/main/res/values/colors.xml
+++ b/AndroidBootstrap/src/main/res/values/colors.xml
@@ -17,45 +17,15 @@
     <color name="bootstrap_brand_warning">#f0ad4e</color>
     <color name="bootstrap_brand_danger">#d9534f</color>
 
+    <!-- View Specific -->
+
     <!-- Buttons -->
     <color name="bootstrap_brand_secondary_fill">#ffffff</color>
     <color name="bootstrap_brand_secondary_border">#cccccc</color>
     <color name="bootstrap_brand_secondary_text">#373a3c</color>
 
-    <!-- TODO legacy colors -->
-
-
-    <color name="white">#ffffffff</color>
-    <color name="black">#ff000000</color>
-    <color name="bbutton_edittext_border">#ccc</color>
-    <color name="bbutton_edittext_disabled">#ffe0e0e0</color>
-
-    <color name="bbutton_primary">#ff428bca</color>
-    <color name="bbutton_primary_edge">#ff357ebd</color>
-
-
-    <color name="bbutton_danger">#ffd9534f</color>
-    <color name="bbutton_danger_edge">#ffd43f3a</color>
-
-    <color name="bbutton_success">#ff5cb85c</color>
-    <color name="bbutton_success_edge">#ff4cae4c</color>
-
-    <color name="bbutton_warning">#fff0ad4e</color>
-    <color name="bbutton_warning_edge">#ffeea236</color>
-
-    <color name="bbutton_info">#ff5bc0de</color>
-    <color name="bbutton_info_edge">#ff46b8da</color>
-
-    <color name="bbutton_default">#ffffffff</color>
-    <color name="bbutton_default_edge">#ffcccccc</color>
-    <color name="bbutton_default_pressed">#ffebebeb</color>
-    <color name="bbutton_default_pressed_edge">#ffadadad</color>
-    <color name="bbutton_default_disabled">#a5ffffff</color>
-    <color name="bbutton_default_disabled_edge">#a5cccccc</color>
-
-    <color name="bthumbnail_background">#ffffffff</color>
-    <color name="bthumbnail_placeholder">#e9e9e9</color>
-    <color name="bthumbnail_border">#dbdbdb</color>
-    <color name="bthumbnail_font">#7e7e7e</color>
+    <!-- Misc -->
+    <color name="bootstrap_edittext_disabled">#ffe0e0e0</color>
+    <color name="bootstrap_thumbnail_background">#ffffffff</color>
 
 </resources>
