Bootstrap Well implementation

--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -103,5 +103,9 @@
         <attr name="bootstrapSize"/>
     </declare-styleable>
 
+    <declare-styleable name="BootstrapWell">
+        <attr name="bootstrapSize"/>
+    </declare-styleable>
+
 </resources>
 
