update bootstrap alert

--- a/sample/src/main/res/layout/example_bootstrap_alert.xml
+++ b/sample/src/main/res/layout/example_bootstrap_alert.xml
@@ -1,67 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+    >
 
     <com.beardedhen.androidbootstrap.BootstrapAlert
+        android:id="@+id/dynamic_alert"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/dynamic_alert"
         android:layout_margin="8dp"
         app:bootstrapBrand="success"
-        app:strongText="Well done!"
+        app:dismissible="true"
         app:messageText="You successfully read this important alert message."
-        app:dismissible="true"/>
+        app:strongText="Well done!"
+        />
 
     <com.beardedhen.androidbootstrap.BootstrapAlert
+        android:id="@+id/static_alert_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/dynamic_alert"
-        android:id="@+id/static_alert_1"
         android:layout_margin="8dp"
         app:bootstrapBrand="info"
-        app:strongText="Heads up! "
+        app:dismissible="true"
         app:messageText="This alert needs your attention, but it's not super important."
-        app:dismissible="true"/>
+        app:strongText="Heads up! "
+        />
 
     <com.beardedhen.androidbootstrap.BootstrapAlert
+        android:id="@+id/static_alert_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/static_alert_1"
-        android:id="@+id/static_alert_2"
         android:layout_margin="8dp"
         app:bootstrapBrand="warning"
-        app:strongText="Warning!"
+        app:dismissible="true"
         app:messageText="Better check yourself, you're not looking too good."
-        app:dismissible="true"/>
+        app:strongText="Warning!"
+        />
 
     <com.beardedhen.androidbootstrap.BootstrapAlert
+        android:id="@+id/static_alert_3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/static_alert_2"
-        android:id="@+id/static_alert_3"
         android:layout_margin="8dp"
         app:bootstrapBrand="primary"
-        app:strongText="Great!"
+        app:dismissible="true"
         app:messageText="This is a short alert."
-        app:dismissible="true"/>
+        app:strongText="Great!"
+        />
 
     <com.beardedhen.androidbootstrap.BootstrapAlert
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/static_alert_3"
         android:layout_margin="8dp"
         app:bootstrapBrand="danger"
-        app:strongText="Oh snap!"
+        app:dismissible="false"
         app:messageText="Change a few things up and try submitting again."
-        app:dismissible="false"/>
+        app:strongText="Oh snap!"
+        />
 
     <Button
+        android:id="@+id/interactive_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:text="Hide/Show alert"
-        android:id="@+id/interactive_button"
-        android:layout_alignParentBottom="true"/>
-</RelativeLayout>
+        />
+</LinearLayout>
