--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -90,7 +90,7 @@
     <declare-styleable name="BootstrapProgressBar">
         <attr name="striped" format="boolean"/>
         <attr name="animated" format="boolean"/>
-        <attr name="progress" format="integer"/>
+        <attr name="bootstrapProgress" format="integer"/>
         <attr name="roundedCorners"/>
         <attr name="bootstrapBrand"/>
         <attr name="bootstrapSize"/>
