added material Icons

--- a/sample/src/main/res/layout/example_awesome_text_view.xml
+++ b/sample/src/main/res/layout/example_awesome_text_view.xml
@@ -173,4 +173,14 @@
         app:bootstrapBrand="info"
         />
 
+    <TextView
+        style="@style/description_label"
+        android:text="Meterial Design Icons:"
+        />
+
+    <com.beardedhen.androidbootstrap.AwesomeTextView
+        style="@style/wrapping_fa_text"
+        app:bootstrapBrand="info"
+        app:bootstrapText="{md_share} {md_whatshot}"/>
+
 </LinearLayout>
