--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -61,6 +61,7 @@
         <attr name="bootstrapBrand"/>
         <attr name="fontAwesomeIcon"/>
         <attr name="typicon"/>
+        <attr name="materialIcon" />
         <attr name="android:clickable" />
     </declare-styleable>
 
