--- a/sample/src/main/res/layout/example_bootstrap_progress_bar.xml
+++ b/sample/src/main/res/layout/example_bootstrap_progress_bar.xml
@@ -53,7 +53,7 @@
             style="@style/description_label"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:text="Striped"
+            android:text="Striped (200 maxProgress)"
             />
 
         <com.beardedhen.androidbootstrap.BootstrapProgressBar
@@ -61,6 +61,7 @@
             style="@style/progress_example"
             app:bootstrapBrand="info"
             app:bootstrapProgress="60"
+            app:bootstrapMaxProgress="200"
             app:striped="true"
             />
     </LinearLayout>
@@ -101,8 +102,8 @@
             android:id="@+id/example_size_change"
             style="@style/progress_example"
             app:bootstrapBrand="success"
-            app:bootstrapSize="md"
             app:bootstrapProgress="85"
+            app:bootstrapSize="md"
             />
     </LinearLayout>
 
@@ -145,5 +146,52 @@
             app:bootstrapProgress="75"
             />
     </LinearLayout>
+
+    <LinearLayout
+        style="@style/progress_weight_container">
+
+        <TextView
+            style="@style/description_label"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:text="Size"
+            />
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="2.5">
+
+            <com.beardedhen.androidbootstrap.BootstrapProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:bootstrapBrand="success"
+                app:bootstrapProgress="20"
+                app:bootstrapSize="md"
+                app:striped="true"
+                />
+
+
+            <com.beardedhen.androidbootstrap.BootstrapProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:bootstrapBrand="success"
+                app:bootstrapProgress="50"
+                app:bootstrapSize="md"
+                />
+
+            <com.beardedhen.androidbootstrap.BootstrapProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:animated="true"
+                app:bootstrapBrand="success"
+                app:bootstrapProgress="85"
+                app:bootstrapSize="md"
+                />
+
+        </FrameLayout>
+    </LinearLayout>
+
 
 </LinearLayout>
