added progressbar attribute bootstrapShowPercentage when set to true it will show a percentage in the center of progress

--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -94,6 +94,7 @@
         <attr name="animated" format="boolean"/>
         <attr name="bootstrapProgress" format="integer"/>
         <attr name="bootstrapMaxProgress" format="integer"/>
+        <attr name="bootstrapshowPercentage" format="boolean"/>
         <attr name="roundedCorners"/>
         <attr name="bootstrapBrand"/>
         <attr name="bootstrapSize"/>
