--- a/AndroidBootstrap/src/main/res/values/dimens.xml
+++ b/AndroidBootstrap/src/main/res/values/dimens.xml
@@ -68,5 +68,7 @@
     <dimen name="bootstrap_default_corner_radius">3dp</dimen>
     <dimen name="bootstrap_progress_bar_height">14dp</dimen>
     <dimen name="bootstrap_badge_default_size">16dp</dimen>
+    <dimen name="bootstrap_progress_bar_default_font_size">14sp</dimen>
+
 
 </resources>
