--- a/sample/src/main/res/layout/example_bootstrap_progress_bar.xml
+++ b/sample/src/main/res/layout/example_bootstrap_progress_bar.xml
@@ -103,6 +103,7 @@
             style="@style/progress_example"
             app:bootstrapBrand="success"
             app:bootstrapProgress="85"
+            app:bootstrapshowPercentage="true"
             app:bootstrapSize="md"
             />
     </LinearLayout>
