Added rounding to BootstrapProgressbarGroup

--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -103,6 +103,7 @@
     <declare-styleable name="BootstrapProgressBarGroup">
         <attr name="bootstrapMaxProgress"/>
         <attr name="bootstrapSize"/>
+        <attr name="roundedCorners"/>
     </declare-styleable>
 
     <declare-styleable name="BootstrapCircleThumbnail">
