--- a/sample/src/main/res/layout/example_bootstrap_progress_bar_group.xml
+++ b/sample/src/main/res/layout/example_bootstrap_progress_bar_group.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              style="@style/example_container"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
@@ -9,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:bootstrapSize="lg"
-        app:bootstrapMaxProgress="60">
+        app:bootstrapMaxProgress="60"
+        app:roundedCorners="true">
 
         <com.beardedhen.androidbootstrap.BootstrapProgressBar
             android:layout_width="0dp"
