--- a/sample/src/main/res/layout/example_bootstrap_progress_bar_group.xml
+++ b/sample/src/main/res/layout/example_bootstrap_progress_bar_group.xml
@@ -35,16 +35,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/micro_padding">
 
         <Button
-            android:id="@+id/sample_progress_bar_group_add"
+            android:id="@+id/example_progress_bar_group_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="add something"/>
 
         <com.beardedhen.androidbootstrap.BootstrapProgressBarGroup
-            android:id="@+id/sample_progress_bar_group_add_group"
+            android:id="@+id/example_progress_bar_group_add_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -69,6 +70,47 @@
                 />
 
         </com.beardedhen.androidbootstrap.BootstrapProgressBarGroup>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/micro_padding">
+
+        <Button
+            android:id="@+id/example_progress_bar_group_round"
+
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:text="rounded"
+            android:layout_height="wrap_content"/>
+
+        <com.beardedhen.androidbootstrap.BootstrapProgressBarGroup
+            android:id="@+id/example_progress_bar_group_round_group"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            app:bootstrapSize="md"
+            app:bootstrapMaxProgress="100">
+
+            <com.beardedhen.androidbootstrap.BootstrapProgressBar
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:bootstrapBrand="success"
+                app:bootstrapProgress="20"
+                />
+
+            <com.beardedhen.androidbootstrap.BootstrapProgressBar
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:bootstrapBrand="danger"
+                app:bootstrapProgress="20"
+                />
+
+            </com.beardedhen.androidbootstrap.BootstrapProgressBarGroup>
+
+
     </LinearLayout>
 
 
