--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -9,81 +10,101 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
         android:orientation="vertical"
+        android:padding="16dp"
         >
 
-        <Button
+        <com.beardedhen.androidbootstrap.BootstrapButton
+            android:id="@+id/github_btn"
+            style="@style/home_button"
+            app:bootstrapBrand="danger"
+            app:bootstrapText="{fa-github} Fork me on Github {fa-heart}"
+            />
+
+        <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/example_bootstrap_button"
             style="@style/home_button"
             android:text="BootstrapButton"
             />
 
-        <Button
+        <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/example_bootstrap_btn_group"
             style="@style/home_button"
             android:text="BootstrapButtonGroup"
             />
 
-        <Button
+        <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/example_fontawesometext"
             style="@style/home_button"
             android:text="AwesomeTextView"
             />
 
-        <Button
-            android:id="@+id/example_bootstrap_progress"
-            style="@style/home_button"
-            android:text="BootstrapProgressBar"
-            />
-
-        <Button
-            android:id="@+id/example_bootstrap_progress_group"
-            style="@style/home_button"
-            android:text="BootstrapProgressBarGroup"
-            />
-
-        <Button
+        <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/example_bootstrap_label"
             style="@style/home_button"
             android:text="BootstrapLabel"
             />
 
-        <Button
-            android:id="@+id/example_bootstrap_edit_text"
+        <com.beardedhen.androidbootstrap.BootstrapButton
+            android:id="@+id/example_bootstrap_progress"
             style="@style/home_button"
-            android:text="BootstrapEditText"
+            android:text="BootstrapProgressBar"
+            app:bootstrapBrand="success"
             />
 
-        <Button
+        <com.beardedhen.androidbootstrap.BootstrapButton
+            android:id="@+id/example_bootstrap_progress_group"
+            style="@style/home_button"
+            android:text="BootstrapProgressBarGroup"
+            app:bootstrapBrand="success"
+            />
+
+        <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/example_bootstrap_cricle_thumbnail"
             style="@style/home_button"
             android:text="BootstrapCircleThumbnail"
+            app:bootstrapBrand="warning"
             />
 
-        <Button
+        <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/example_bootstrap_thumbnail"
             style="@style/home_button"
             android:text="BootstrapThumbnail"
+            app:bootstrapBrand="warning"
             />
-        <Button
+
+        <com.beardedhen.androidbootstrap.BootstrapButton
+            android:id="@+id/example_bootstrap_edit_text"
+            style="@style/home_button"
+            android:text="BootstrapEditText"
+            app:bootstrapBrand="info"
+            />
+
+        <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/example_bootstrap_well"
             style="@style/home_button"
-            android:text="BootstrapWell"/>
-        
-        <Button
+            android:text="BootstrapWell"
+            app:bootstrapBrand="regular"
+            />
+
+        <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/example_bootstrap_dropdown"
             style="@style/home_button"
-            android:text="BootstrapDropdown"/>
+            android:text="BootstrapDropdown"
+            />
 
-        <Button
+        <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/example_bootstrap_alert"
             style="@style/home_button"
-            android:text="BootstrapAlert"/>
+            android:text="BootstrapAlert"
+            app:bootstrapBrand="danger"
+            />
 
-        <Button
+        <com.beardedhen.androidbootstrap.BootstrapButton
             android:id="@+id/example_bootstrap_badge"
             style="@style/home_button"
-            android:text="BootstrapBadge"/>
+            android:text="BootstrapBadge"
+            app:bootstrapBrand="warning"
+            />
     </LinearLayout>
 </ScrollView>
